--- a/watcher/config.yaml
+++ b/watcher/config.yaml
@@ -3,3 +3,7 @@ jito:
 sol:
   rpc-helius: https://api.mainnet-beta.solana.com
   rpc: http://185.209.179.15:8899
+sandwich:
+  similarThreshold: 10      # specify frontrun & backrun similar range, e.g. 1/10
+  parallel-requesting: 8    # parallel requesting num of slot
+  parallel-processing: 10   # parallel processing of sandwiches
